breezy-debian (2.8.20) unstable; urgency=medium

  * Add 'brz debrelease' command.
  * Fix autopgktests; use Python 3 dependencies.
  * Fix test_merge_upstream.ChangelogAddNewVersionTests.test_add_new
    when run with non-ascii username and LC_ALL=C.
  * Hide the mark-uploaded command.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 20 Oct 2018 22:57:16 +0000

breezy-debian (2.8.16) unstable; urgency=medium

  * Properly escape slashes in git branch names.
  * Add dgit: directory.
  * Cope with Dgit headers without location.
  * Drop outdated X-Python-Version header.
  * Update to run with Python 3 version of Breezy.
  * Switch to pybuild.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 14 Sep 2018 14:41:09 +0100

breezy-debian (2.8.15) unstable; urgency=medium

  * Guess upstream tag names if none is explicitly set.
  * Support retrieving/storing pristine-tar deltas in git branches.
  * Simplify handling of apt: URLs.
  * Display resolved branch URL in apt: directory.
  * Add support for Vcs-Darcs in directory.
  * Handle rsync-style URLs in Vcs-Git.
  * Suport resolving other directories in apt:.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 09 Sep 2018 13:24:02 +0100

breezy-debian (2.8.14) unstable; urgency=medium

  * Update Vcs-Bzr to reflect code hosting is now on code.breezy-
    vcs.org.
  * Read upstream branch from debian/upstream/metadata. LP: #1791456

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 May 2018 15:32:40 +0100

breezy-debian (2.8.13) unstable; urgency=medium

  * Add dependency on python-dulwich. Closes: #899008
  * Remove obsolete URL from debian/copyright.
  * Change Vcs-Bzr URL to launchpad.
  * debian/source/lintian-overrides: Fix source package name.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 18 May 2018 16:40:12 +0100

breezy-debian (2.8.12) unstable; urgency=medium

  * Skip GPG signatures when looking for tarballs.
  * Fix compatibility with newer versions of Breezy.